@@ -17,26 +17,10 @@
 
 #include <config.h>
 #include <system.h>
+#include <portable/gssapi.h>
 #include <portable/socket.h>
 
 #include <errno.h>
-
-#ifdef HAVE_GSSAPI_H
-# include <gssapi.h>
-#else
-# include <gssapi/gssapi_generic.h>
-#endif
-
-/* Handle compatibility to older versions of MIT Kerberos. */
-#ifndef HAVE_GSS_RFC_OIDS
-# define GSS_C_NT_USER_NAME gss_nt_user_name
-#endif
-
-/* Heimdal provides a nice #define for this. */
-#if !HAVE_DECL_GSS_KRB5_MECHANISM
-# include <gssapi/gssapi_krb5.h>
-# define GSS_KRB5_MECHANISM gss_mech_krb5
-#endif
 
 #include <client/internal.h>
 #include <client/remctl.h>
