@@ -15,13 +15,8 @@
 
 #include <config.h>
 #include <system.h>
+#include <portable/gssapi.h>
 #include <portable/socket.h>
-
-#ifdef HAVE_GSSAPI_H
-# include <gssapi.h>
-#else
-# include <gssapi/gssapi_generic.h>
-#endif
 
 #include <server/internal.h>
 #include <util/util.h>
